# chat_app

./: .gitignore  README.md  start_servers.sh  test_server_stress.py
.claude/: progress.md  refactor_features.json
.github/workflows/: build-apk.yml  build_apk.yml
.iflow/: features.json  progress.md
client/chat_app/: pubspec.yaml
client/chat_app/android/: build.gradle  gradle.properties
client/chat_app/android/app/: build.gradle  proguard-rules.pro
client/chat_app/android/app/src/main/: AndroidManifest.xml
client/chat_app/android/app/src/main/kotlin/com/ey/echat/: ForegroundService.kt  JPushReceiver.kt  JPushService.kt  MainActivity.kt
client/chat_app/lib/: main.dart
client/chat_app/lib/models/: protocol.dart
client/chat_app/lib/providers/: app_provider.dart
client/chat_app/lib/screens/: chat_screen.dart  chats_screen.dart  create_group_screen.dart  edit_profile_screen.dart  favorites_screen.dart  file_manager_screen.dart  gallery_screen.dart  group_management_screen.dart  login_screen.dart  profile_screen.dart  server_config_screen.dart  settings_screen.dart  splash_screen.dart
client/chat_app/lib/services/: chat_service.dart  e2ee_service.dart  fcm_service.dart  jpush_service.dart  message_database.dart  network_service.dart  notification_service.dart  storage_service.dart  websocket_service.dart
server/: .env.example  .gitignore  CMakeLists.txt  xmake.lua
server/.xmake/linux/arm64/: xmake.conf
server/.xmake/linux/arm64/cache/: config  detect  history  toolchain
server/include/: database.hpp  database_pool.hpp  deepseek_client.hpp  group_manager.hpp  http_gateway.hpp  protocol.hpp  server.hpp  session.hpp  thread_pool_v2.hpp  websocket_server.hpp
server/plugins/: deepseek_bot.js
server/src/: bot_manager.cpp  database.cpp  database_pool.cpp  deepseek_client.cpp  gateway_main.cpp  group_manager.cpp  http_gateway.cpp  js_bot.cpp  main.cpp  media_server.cpp  server.cpp  session.cpp  thread_pool_v2.cpp  user_manager.cpp  websocket_server.cpp
